# dteam-django-test

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
CVProject/: db.sqlite3
CVProject/CVProject/: celery.py  settings.py  tasks.py  urls.py
CVProject/api/: tests.py
CVProject/api/cv/: serializers.py  views.py
CVProject/api/tests/: test_cv_api.py
CVProject/main/: context_proccessors.py  middleware.py  models.py  tests.py  views.py
CVProject/main/__pycache__/: settings.py
CVProject/main/fixtures/: CVs.json
CVProject/main/migrations/: 0001_initial.py  0002_requestlog.py  0003_requestlog_status.py
CVProject/main/repositories/: cv.py  request_log.py
CVProject/main/templates/: cv_info.html  cv_info_pdf.html  cv_list.html  logs_list.html  settings.html
CVProject/utils/: config.py  pdf.py  temporary_files.py
deploy/: migrate_db.sh  worker_entry.sh
temp_files/: 7defaeb2-26e4-4652-b74a-35f4fc81692e
test-task/: pyproject.toml
