[project]
name = "test"
version = "0.1.0"
description = ""
authors = [{ name = "Pavlo Lopatiuk", email = "pashalopatuk@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4" # changed to <4 because of package xhtml2pdf
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
    "adrf (>=0.1.9,<0.2.0)",
    "ruff (>=0.11.2,<0.12.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
extraPaths = ["./CVProject"]
